@@ -2,6 +2,8 @@ from 2.7.10 to 2.7.11
 - removed set_unexpected() invocation (not useful for years in libdar
   and incompatible with C++17)
 - fixed generated dynamic libdar binary to include all its dependent libraries
+- modified default block size for binary deltas, to be closer to what rsync
+  uses (more details in man page).
 
 from 2.7.9 to 2.7.10
 - displaying the slicing information about the archive of reference
